--- a/.github/workflows/Deployment.yaml
+++ b/.github/workflows/Deployment.yaml
@@ -7,11 +7,12 @@ on:
 #   bicepfilePath: main.bicep
 
 jobs:
-  Create Build Artifacts:
+  Build-Artifacts:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
+
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.4
       with:
