first try for pipeline

--- a/.github/workflows/Deployment.yaml
+++ b/.github/workflows/Deployment.yaml
@@ -1,11 +1,8 @@
-on:
-  push:
-    branches: [ $default-branch ]
+on: push
 
 # env:
 #   resourceGroupName: Dev-Pels-01
 #   bicepfilePath: main.bicep
-# need for commit
 
 jobs:
   Build-Artifacts:
