--- a/.github/workflows/Deployment.yaml
+++ b/.github/workflows/Deployment.yaml
@@ -13,6 +13,14 @@ jobs:
 
     - name: Upload Template Artifacts
       uses: actions/upload-artifact@v2.2.4
+      with:
+        name: build-artifacts 
+        path: |
+          PolicyTemplates
+          Scripts
+          Templates
+
+
 
   # Test-Deployment:
   #   runs-on: ubuntu-latest
