--- a/.github/workflows/Deployment.yaml
+++ b/.github/workflows/Deployment.yaml
@@ -20,13 +20,24 @@ jobs:
           Scripts
           Templates
 
-
-
-  # Test-Deployment:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v2.3.4
+  Test-Deployments:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: build-artifacts
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{secrets.AZURE_CREDENTIALS}}
+        enable-AzPSSession: true
+    - name: Check if policy definitions need to be removed.
+      shell: pwsh
+      run: |
+          Scripts\Remove-whatif.ps1
 
   #   - name: Install from PSGallery
   #     shell: pwsh
