--- a/.github/workflows/Deployment.yaml
+++ b/.github/workflows/Deployment.yaml
@@ -22,6 +22,7 @@ jobs:
 
   Test-Deployments:
     runs-on: ubuntu-latest
+    needs: Build-Artifacts
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
@@ -37,7 +38,7 @@ jobs:
     - name: Check if policy definitions need to be removed.
       shell: pwsh
       run: |
-          Scripts\Remove-whatif.ps1
+          .\Scripts\Remove-whatif.ps1
 
   #   - name: Install from PSGallery
   #     shell: pwsh
