--- a/.github/workflows/Deployment.yaml
+++ b/.github/workflows/Deployment.yaml
@@ -10,7 +10,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.4
-
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{secrets.AZURE_CREDENTIALS}}
+        enable-AzPSSession: true
+    - name: build Bicep file
+      uses: Azure/cli@1.0.4
+      with:
+        inlineScript: |
+          az bicep build --file Templates\AppService.bicep --outfile Templates\AppService.json
     - name: Upload Template Artifacts
       uses: actions/upload-artifact@v2.2.4
       with:
