adding new policy

--- a/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
+++ b/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
@@ -15,7 +15,7 @@
                 "equals": "Microsoft.Web/sites"
             },
             "then": {
-                "effect": "DeployIfNotExists",
+                "effect": "deployIfNotExists",
                 "details": {
                     "type": "Microsoft.Web/sites/config",
                     "name": "web",
