--- a/.github/workflows/Deployment.yaml
+++ b/.github/workflows/Deployment.yaml
@@ -49,7 +49,7 @@ jobs:
       uses: Azure/powershell@v1
       with:
         inlineScript: |
-          Select-AzSubscription ${{secrets.AZURE_SUBSCRIPTIONID2}}
+          Select-AzSubscription ${{secrets.AZURE_SUBSCRIPTIONID}}
           New-AzResourceGroupDeployment -ResourceGroupName ${{ env.resourceGroupName }} -TemplateFile ${{ env.appserviceTemplate }} -WhatIf
         azPSVersion: latest
 
@@ -97,7 +97,7 @@ jobs:
       uses: Azure/powershell@v1
       with: 
         inlineScript: |
-          Select-AzSubscription ${{secrets.AZURE_SUBSCRIPTIONID2}}
+          Select-AzSubscription ${{secrets.AZURE_SUBSCRIPTIONID}}
           New-AzResourceGroupDeployment -ResourceGroupName ${{ env.resourceGroupName }} -TemplateFile ${{ env.appserviceTemplate }}
         azPSVersion: latest
 
@@ -121,6 +121,6 @@ jobs:
       uses: Azure/powershell@v1
       with:
         inlineScript: |
-          Select-AzSubscription ${{secrets.AZURE_SUBSCRIPTIONID2}}
+          Select-AzSubscription ${{secrets.AZURE_SUBSCRIPTIONID}}
           Start-AzPolicyComplianceScan -ResourceGroupName ${{ env.resourceGroupName }}
         azPSVersion: latest
