correcting subscription scope

--- a/.github/workflows/Deployment.yaml
+++ b/.github/workflows/Deployment.yaml
@@ -1,7 +1,7 @@
 on: push
 
 env:
-  resourceGroupName: rutgerpels-ishare-testenv-weu
+  resourceGroupName: appservice-RG
   appserviceTemplate: Templates/AppService.json
 
 jobs:
