update for dine policy

--- a/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
+++ b/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
@@ -14,7 +14,7 @@
                 "allof": [
                     {
                         "field": "type",
-                        "equals": "Microsoft.Web/sites"
+                        "equals": "Microsoft.Web/sites/config"
                     }
                 ]
             },
