--- a/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
+++ b/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
@@ -14,7 +14,7 @@
                 "allof": [
                     {
                         "field": "type",
-                        "equals": "Microsoft.Web/sites/config"
+                        "equals": "Microsoft.Web/sites"
                     }
                 ]
             },
@@ -28,79 +28,88 @@
                         "/providers/Microsoft.Authorization/roleDefinitions/8e3af657-a8ff-443c-a75c-2fe8c4bcb635"
                     ],
                     "deployment": {
-                        "properties": {
-                            "mode": "incremental",
-                            "template": {
-                                "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
-                                "contentVersion": "1.0.0.0",
+                        "deployment": {
+                            "properties": {
+                                "mode": "incremental",
                                 "parameters": {
-                                    "fullAppServiceName": {
-                                        "type": "string"
+                                    "webAppName": {
+                                        "value": "[field('name')]"
+                                    },
+                                    "location": {
+                                        "value": "[field('location')]"
                                     }
                                 },
-                                "resources": [
-                                    {
-                                        "name": "[concat(parameters('fullAppServiceName'), '/current')]",
-                                        "type": "Microsoft.Web/sites/config",
-                                        "apiVersion": "2021-03-01",
-                                        "properties": {
-                                            "ipSecurityRestrictions": {
-                                                "value": [
-                                                    {
-                                                        "ipAddress": "192.168.1.0",
-                                                        "action": "Allow",
-                                                        "priority": 1,
-                                                        "name": "AllowedIPAddress1",
-                                                        "description": "AllowedIPAddress1"
-                                                    },
-                                                    {
-                                                        "ipAddress": "192.168.1.1",
-                                                        "action": "Allow",
-                                                        "priority": 2,
-                                                        "name": "AllowedIPAddress2",
-                                                        "description": "AllowedIPAddress2"
-                                                    },
-                                                    {
-                                                        "ipAddress": "192.168.1.2",
-                                                        "action": "Allow",
-                                                        "priority": 3,
-                                                        "name": "AllowedIPAddress3",
-                                                        "description": "AllowedIPAddress3"
-                                                    }
-                                                ]
-                                            },
-                                            "scmIpSecurityRestrictions": {
-                                                "value": [
-                                                    {
-                                                        "ipAddress": "192.168.1.0",
-                                                        "action": "Allow",
-                                                        "priority": 1,
-                                                        "name": "AllowedIPAddress1",
-                                                        "description": "AllowedIPAddress1"
-                                                    },
-                                                    {
-                                                        "ipAddress": "192.168.1.1",
-                                                        "action": "Allow",
-                                                        "priority": 2,
-                                                        "name": "AllowedIPAddress2",
-                                                        "description": "AllowedIPAddress2"
-                                                    },
-                                                    {
-                                                        "ipAddress": "192.168.1.2",
-                                                        "action": "Allow",
-                                                        "priority": 3,
-                                                        "name": "AllowedIPAddress3",
-                                                        "description": "AllowedIPAddress3"
-                                                    }
-                                                ]
+                                "template": {
+                                    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
+                                    "contentVersion": "1.0.0.0",
+                                    "parameters": {
+                                        "webAppName": {
+                                            "type": "string"
+                                        },
+                                        "location": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "resources": [
+                                        {
+                                            "name": "[concat(parameters('webAppName'), '/web')]",
+                                            "type": "Microsoft.Web/sites/config",
+                                            "apiVersion": "2020-09-01",
+                                            "location": "[parameters('location')]",
+                                            "properties": {
+                                                "ipSecurityRestrictions": {
+                                                    "value": [
+                                                        {
+                                                            "ipAddress": "192.168.1.0",
+                                                            "action": "Allow",
+                                                            "priority": 1,
+                                                            "name": "AllowedIPAddress1",
+                                                            "description": "AllowedIPAddress1"
+                                                        },
+                                                        {
+                                                            "ipAddress": "192.168.1.1",
+                                                            "action": "Allow",
+                                                            "priority": 2,
+                                                            "name": "AllowedIPAddress2",
+                                                            "description": "AllowedIPAddress2"
+                                                        },
+                                                        {
+                                                            "ipAddress": "192.168.1.2",
+                                                            "action": "Allow",
+                                                            "priority": 3,
+                                                            "name": "AllowedIPAddress3",
+                                                            "description": "AllowedIPAddress3"
+                                                        }
+                                                    ]
+                                                },
+                                                "scmIpSecurityRestrictions": {
+                                                    "value": [
+                                                        {
+                                                            "ipAddress": "192.168.1.0",
+                                                            "action": "Allow",
+                                                            "priority": 1,
+                                                            "name": "AllowedIPAddress1",
+                                                            "description": "AllowedIPAddress1"
+                                                        },
+                                                        {
+                                                            "ipAddress": "192.168.1.1",
+                                                            "action": "Allow",
+                                                            "priority": 2,
+                                                            "name": "AllowedIPAddress2",
+                                                            "description": "AllowedIPAddress2"
+                                                        },
+                                                        {
+                                                            "ipAddress": "192.168.1.2",
+                                                            "action": "Allow",
+                                                            "priority": 3,
+                                                            "name": "AllowedIPAddress3",
+                                                            "description": "AllowedIPAddress3"
+                                                        }
+                                                    ]
+                                                }
                                             }
                                         }
-                                    }
-                                ]
-                            },
-                            "parameters": {
-                                "fullAppServiceName": {
-                                    "value": "[field('fullName')]"
+                                    ]
                                 }
                             }
                         }
