update for dine policy

--- a/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
+++ b/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
@@ -19,7 +19,7 @@
                 "details": {
                     "type": "Microsoft.Web/sites/config",
                     "existenceCondition": {
-                        "aloff": [
+                        "allof": [
                             {
                                 "count": {
                                     "field": "Microsoft.Web/sites/config/ipSecurityRestrictions[*]",
