--- a/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
+++ b/PolicyTemplates/policydefinitions/appservice-firewall-dine.json
@@ -85,21 +85,21 @@
                                         "properties": {
                                             "ipSecurityRestrictions": [
                                                 {
-                                                    "ipAddress": "192.168.1.0",
+                                                    "ipAddress": "192.168.1.0/32",
                                                     "action": "Allow",
                                                     "priority": 1,
                                                     "name": "AllowedIPAddress1",
                                                     "description": "AllowedIPAddress1"
                                                 },
                                                 {
-                                                    "ipAddress": "192.168.1.1",
+                                                    "ipAddress": "192.168.1.1/32",
                                                     "action": "Allow",
                                                     "priority": 2,
                                                     "name": "AllowedIPAddress2",
                                                     "description": "AllowedIPAddress2"
                                                 },
                                                 {
-                                                    "ipAddress": "192.168.1.2",
+                                                    "ipAddress": "192.168.1.2/32",
                                                     "action": "Allow",
                                                     "priority": 3,
                                                     "name": "AllowedIPAddress3",
@@ -108,21 +108,21 @@
                                             ],
                                             "scmIpSecurityRestrictions": [
                                                 {
-                                                    "ipAddress": "192.168.1.0",
+                                                    "ipAddress": "192.168.1.0/32",
                                                     "action": "Allow",
                                                     "priority": 1,
                                                     "name": "AllowedIPAddress1",
                                                     "description": "AllowedIPAddress1"
                                                 },
                                                 {
-                                                    "ipAddress": "192.168.1.1",
+                                                    "ipAddress": "192.168.1.1/32",
                                                     "action": "Allow",
                                                     "priority": 2,
                                                     "name": "AllowedIPAddress2",
                                                     "description": "AllowedIPAddress2"
                                                 },
                                                 {
-                                                    "ipAddress": "192.168.1.2",
+                                                    "ipAddress": "192.168.1.2/32",
                                                     "action": "Allow",
                                                     "priority": 3,
                                                     "name": "AllowedIPAddress3",
